[project]
name = "microtonal-viz"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "librosa>=0.10.1",
    "numpy==1.26.4",
    "polars==1.5.0",
    "pydub==0.25.1",
    "pygame-ce>=2.5.1",
    "pygame-gui>=0.6.12",
    "simpleaudio==1.0.4",
    "torch>=2.5.1",
    "torchcrepe>=0.0.23",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.1",
]
